# trophy-navigator

./: .gitignore  PLAN.md  TODO.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
sync-server/: package-lock.json  package.json  server.js
ui/: index.html
